--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -7,6 +7,14 @@ h1 {
     font-weight: bolder;
 }
 
+p {
+    font-size: 28px;
+}
+
+h1, h2, p {
+    color: rgb(94, 0, 94);
+}
+
 .heading {
     margin-top: 8%;
 }
